# Qt-C-

stat_etab/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
